--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "postinstall": "husky install",
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "Robert Brodie <rbrodie@itx.com>",
@@ -14,10 +15,12 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.7",
     "nodemon": "3.1.4",
     "prettier": "3.3.2",
     "ts-node": "10.9.1",
-    "typescript-eslint": "^7.16.0",
+    "typescript-eslint": "7.16.0",
     "winston": "3.8.2"
   },
   "dependencies": {
@@ -28,5 +31,11 @@
     "express": "4.19.2",
     "express-winston": "4.2.0",
     "winston": "3.13.0"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "./node_modules/.bin/prettier --write",
+      "./node_modules/.bin/eslint --fix"
+    ]
   }
 }
