--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "nodemon": "3.1.4",
     "prettier": "3.3.2",
     "ts-node": "10.9.1",
-    "typescript-eslint": "7.16.0",
-    "winston": "3.8.2"
+    "typescript-eslint": "7.16.0"
   },
   "dependencies": {
     "@types/express": "4.17.21",
