--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,14 +1,17 @@
 env:
   node: true
+  mocha: true
 extends:
   - plugin:@typescript-eslint/recommended
   - plugin:prettier/recommended
   - eslint:recommended
+  - prettier
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 9
   project: ./tsconfig.json
 plugins:
   - '@typescript-eslint'
+  - prettier
 rules:
   no-console: 'error'
