--- a/package.json
+++ b/package.json
@@ -6,19 +6,32 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "postinstall": "husky install",
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "test": "NODE_ENV=test nyc mocha -r ts-node/register test/**/*.spec.ts",
+    "prepare": "husky"
   },
   "author": "Robert Brodie <rbrodie@itx.com>",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@ngrok/ngrok": "1.3.0",
+    "@types/chai": "4.3.11",
     "@types/dotenv-flow": "3.3.3",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.5.0",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "chai": "4.3.10",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "9.0.11",
     "lint-staged": "15.2.7",
+    "mocha": "^10.7.3",
     "nodemon": "3.1.4",
+    "nyc": "^17.0.0",
     "prettier": "3.3.2",
+    "sinon": "^18.0.0",
+    "sinon-chai": "^3.7.0",
     "ts-node": "10.9.1",
     "typescript-eslint": "7.16.0"
   },
@@ -29,6 +42,7 @@
     "dotenv-flow": "4.1.0",
     "express": "4.19.2",
     "express-winston": "4.2.0",
+    "save-dev": "^0.0.1-security",
     "winston": "3.13.0"
   },
   "lint-staged": {
